fix the test